--- a/index.html
+++ b/index.html
@@ -3,8 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="container">
+    <header class="row">
+        <!--  LOGO | MENU | SEARCHBAR  -->
+        <div class="col-3" id="header_logo"><h1>e-Mensa</h1></div>
+        <div class="col-6" id="header_menu">MENU</div>
+        <div class="col-3" id="header_search">SEARCH</div>
+    </header>
+    <div class="row" id="content_top_row">
+        <div class="col" id="content_top_row_picture">
+            <img class="img-fluid rounded" id="image_start_banner" src="img/food_banner_2_resized.jpg" title="Photo by Dan Gold on Unsplash">
+        </div>
+    </div>
+    <div class="row" id="content_bot_row">
+        <div class="col-3" id="content_bot_row_left">
+            <!--
+            [ TEXT1  |
+              TEXT2 ]|
+            -->
+            <p>
+                Der Dienst e-Mensa ist noch beta. Sie können bereits Mahlzeiten
+                durchstöbern, aber noch nicht bestellen.
+            </p>
+            <p>
+                Registrieren Sie sich hier, um über die Veröffentlichung des
+                Dienstes per Mail informiert zu werden.
+            </p>
+        </div>
+        <div class="col-9" id="content_bot_row_right">
+            <!--
+            |[HEADLINE]|[BUTTONS]
+            |[------PICTURE-----]
+             -->
+            <div class="row" id="content_bot_row_right_top">
+                <div class="col-9" id="content_bot_row_right_top_headline">
+                    <h2>Leckere Gerichte vorbestellen</h2>
+                    <p>
+                        ... und gemeinsam mit Kommilitonen und Freunden essen
+                    </p>
+                </div>
+                <div class="col-3" id="content_bot_row_right_top_buttons">Buttons</div>
+            </div>
+            <div class="row" id="content_bot_row_right_bot">
+                <div class="col" id="content_bot_row_right_bot_picture">Picture</div>
+            </div>
+        </div>
+    </div>
+    <footer class="row">
+        <!--  Copyright | MENU |   -->
+        <div class="col-3" id="footer_copyright">&copy; 2019 Eugen Burikov</div>
+        <div class="col-6" id="footer_menu">MENU</div>
+        <div class="col-3" id="footer_placeholder">S</div>
+    </footer>
+</div>
 </body>
 </html>
+<!--
+        <div class="col-2" id=""></div>
+        <div class="col-8" id=""></div>
+        <div class="col-2" id=""></div>
+-->
