Products not finished

--- a/Start.html
+++ b/Start.html
@@ -90,7 +90,7 @@
                 <li class="nav-item"><a class="nav-link" href="Impressum.html">Impressum</a></li>
             </ul>
         </nav>
-        <div class="col-3" id="footer_placeholder">S</div>
+        <div class="col-3" id="footer_placeholder"></div>
     </footer>
 </div>
 </body>
