--- a/Produkte.html
+++ b/Produkte.html
@@ -70,6 +70,13 @@
 <!--            <div class="col-12" id="content_bot_row_right_cards">-->
                 <div class="card-columns">
                     <div class="card">
+                        <img src="img/pizza_2.jpg" class="card-img-top" alt="Picture error..." title="Bild von engin akyurt auf Pixabay ">
+                        <div class="card-body">
+                            <h5 class="card-title">Pizza</h5>
+                            <p class="card-text"><a href="Detail.html">Details</a></p>
+                        </div>
+                    </div>
+                    <div class="card">
                         <img src="img/hamburger_1.jpg" class="card-img-top" alt="Picture error..." title="Bild von Niek Verlaan auf Pixabay ">
                         <div class="card-body">
                             <h5 class="card-title">Hamburger</h5>
@@ -91,17 +98,10 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="img/pizza_1.jpg" class="card-img-top" alt="Picture error..." title="Bild von Free-Photos auf Pixabay ">
+                        <img src="img/pizza_1.jpg" class="card-img-top img-sold" alt="Picture error..." title="Bild von Free-Photos auf Pixabay ">
                         <div class="card-body">
-                            <h5 class="card-title">Pilzpizza</h5>
-                            <p class="card-text"><a href="">Details</a></p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/pizza_2.jpg" class="card-img-top img-sold" alt="Picture error..." title="Bild von engin akyurt auf Pixabay ">
-                        <div class="card-body">
-                            <h5 class="card-title text-sold">Pizza</h5>
-                            <p class="card-text text-sold">Vegriffen</p>
+                            <h5 class="card-title text-sold">Pilzpizza</h5>
+                            <p class="card-text">Vergriffen</p>
                         </div>
                     </div>
                     <div class="card">
