--- a/Start.html
+++ b/Start.html
@@ -25,8 +25,11 @@
             </ul>
         </nav>
         <div class="col-3" id="header_search">
-            <span class="fas fa-search" id="icon_search"></span>
-            <input id="input_search" placeholder="Suchen...">
+            <form action="http://www.google.de/search" method="GET" target="_blank">
+                <span class="fas fa-search" id="icon_search"></span>
+                <input id="input_search" name="q" placeholder="Suchen...">
+                <input name="as_sitesearch" value="https://www.fh-aachen.de" type="hidden">
+            </form>
         </div>
     </header>
     <div class="row" id="content_top_row">
@@ -62,11 +65,11 @@
                     </p>
                 </div>
                 <div class="col-3" id="content_bot_row_right_top_buttons">
-                    <button class="btn btn-primary btn-lg" id="button_register" value="">
+                    <button class="btn btn-primary btn-lg button-fh-schema" value="">
                         <i class="far fa-hand-point-right" id="icon_finger"></i>
                         Registrieren
                     </button>
-                    <button class="btn btn-primary btn-lg" id="button_login" value="">
+                    <button class="btn btn-primary btn-lg button-fh-schema" value="">
                         <i class="fas fa-sign-in-alt" id="icon_signin"></i>
                         Anmelden
                     </button>
