--- a/Impressum.html
+++ b/Impressum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Impressum</title>
-    <meta http-equiv="refresh" content="3; URL=Start.html">
+    <meta http-equiv="refresh" content="3; URL=Start.php">
 </head>
 <body>
 
